--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -129,7 +129,6 @@
 			align-items: center;
 			height: 100%;
 			width: 100%;
-			justify-content: space-between;
 			@media screen and (max-width: 1120px) {
 				flex-direction: column;
 			}
@@ -162,6 +161,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				width: 100%;
 				@media screen and (max-width: 1250px) {
 					margin-right: 0px;
 				}
@@ -725,7 +725,8 @@
 		margin-top: 20px;
 		.ant-select {
 			margin: 0px 10px;
-			width: 60% !important;
+			width: 100% !important;
+			cursor: default;
 			margin-bottom: 10px;
 			height: 50px;
 			box-shadow: 0px 0px 4px -1px #26914a;
