--- a/src/containers/listing/listing.scss
+++ b/src/containers/listing/listing.scss
@@ -64,22 +64,16 @@
           width: 100%;
         }
         .inputDiv {
-          width: 377px;
-          height: 59px;
-          border-radius: 29.5px;
-          background: #fff;
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-          display: flex;
+         
+          
+			 width: 100%;
           align-items: center;
-          padding: 0 25px;
           position: relative;
           margin: 0px 12px;
           @media screen and (max-width: 1440px) {
-            height: 40px;
-            width: 35%;
+           
             @media screen and (max-width: 1024px) {
-              width: 47%;
-              height: 40px;
+             
             }
             @media screen and (max-width: 600px) {
               width: 100%;
@@ -156,12 +150,13 @@
             position: absolute;
           }
           input {
-            border: 1px solid black;
-            height: 90%;
+            
+          height: 59px;
+          border-radius: 29.5px;
+          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
             width: 100%;
             outline: none;
-            border: none;
-            padding: 0 30px;
+            cursor: default;
             font-family: Poppins;
             font-weight: normal;
             font-size: 18px;
